# internal/routers/api/v1/article.go
@@ -16,6 +16,13 @@ func NewArticle() Article {
 	return Article{}
 }
 
+// @Summary 获取单个文章
+// @Produce json
+// @Param id path int true "文章ID"
+// @Param Authorization header string true "Bearer Token"
+// @Success 200 {object} Article "文章详细信息"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Router /api/v1/articles/{id} [get]
 func (a Article) Get(c *gin.Context) {
 	param := service.ArticleRequest{ID: convert.StrTo(c.Param("id")).MustUInt32()}
 	response := app.NewResponse(c)
@@ -38,6 +45,17 @@ func (a Article) Get(c *gin.Context) {
 	return
 }
 
+// @Summary 获取文章列表
+// @Produce json
+// @Param name query string false "文章名称"
+// @Param tag_id query int true "标签ID"
+// @Param state query int false "状态" Enums(0, 1) default(1)
+// @Param page query int false "页码"
+// @Param page_size query int false "每页数量"
+// @Param Authorization header string true "Bearer Token"
+// @Success 200 {array} Article "文章列表"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Router /api/v1/articles [get]
 func (a Article) List(c *gin.Context) {
 	param := service.ArticleListRequest{}
 	response := app.NewResponse(c)
@@ -61,6 +79,18 @@ func (a Article) List(c *gin.Context) {
 	return
 }
 
+// @Summary 创建文章
+// @Produce json
+// @Param title body string true "文章标题"
+// @Param desc body string false "文章描述"
+// @Param content body string true "文章内容"
+// @Param cover_image_url body string false "封面图片地址"
+// @Param state body int false "状态" Enums(0, 1) default(1)
+// @Param tag_ids body []int true "标签ID集合"
+// @Param Authorization header string true "Bearer Token"
+// @Success 201 {object} Article "文章创建成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Router /api/v1/articles [post]
 func (a Article) Create(c *gin.Context) {
 	param := service.CreateArticleRequest{}
 	response := app.NewResponse(c)
@@ -83,6 +113,19 @@ func (a Article) Create(c *gin.Context) {
 	return
 }
 
+// @Summary 更新文章
+// @Produce json
+// @Param id path int true "文章ID"
+// @Param title body string false "文章标题"
+// @Param desc body string false "文章描述"
+// @Param content body string false "文章内容"
+// @Param cover_image_url body string false "封面图片地址"
+// @Param state body int false "状态" Enums(0, 1)
+// @Param tag_ids body []int false "标签ID集合"
+// @Param Authorization header string true "Bearer Token"
+// @Success 200 {object} Article "文章更新成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Router /api/v1/articles/{id} [put]
 func (a Article) Update(c *gin.Context) {
 	param := service.UpdateArticleRequest{ID: convert.StrTo(c.Param("id")).MustUInt32()}
 	response := app.NewResponse(c)
@@ -104,6 +147,14 @@ func (a Article) Update(c *gin.Context) {
 	response.ToResponse(gin.H{})
 	return
 }
+
+// @Summary 删除文章
+// @Produce json
+// @Param id path int true "文章ID"
+// @Param Authorization header string true "Bearer Token"
+// @Success 204 "文章删除成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Router /api/v1/articles/{id} [delete]
 func (a Article) Delete(c *gin.Context) {
 	param := service.DeleteArticleRequest{ID: convert.StrTo(c.Param("id")).MustUInt32()}
 	response := app.NewResponse(c)
